--- a/Tello/Tello.vcxproj.filters
+++ b/Tello/Tello.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="udpclient.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="itellocontrol.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Tello.cpp">
