--- a/Tello/Tello.vcxproj
+++ b/Tello/Tello.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="flightplan.hpp" />
     <ClInclude Include="flightPlanValidator.hpp" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="itellocontrol.hpp" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="state.hpp" />
     <ClInclude Include="tellocontrol.hpp" />
