--- a/Tello/Tello.vcxproj
+++ b/Tello/Tello.vcxproj
@@ -129,6 +129,7 @@
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <AdditionalIncludeDirectories>C:\OpenCv\opencv\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
@@ -145,7 +146,6 @@
     <ClInclude Include="state.hpp" />
     <ClInclude Include="tellocontrol.hpp" />
     <ClInclude Include="udpclient.hpp" />
-    <ClInclude Include="udpserver.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -158,7 +158,6 @@
     <ClCompile Include="Tello.cpp" />
     <ClCompile Include="tellocontrol.cpp" />
     <ClCompile Include="udpclient.cpp" />
-    <ClCompile Include="udpserver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
