--- a/PhotoVideo/PhotoVideo.vcxproj.filters
+++ b/PhotoVideo/PhotoVideo.vcxproj.filters
@@ -4,12 +4,12 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="photovideo.cpp">
+    <ClCompile Include="photovideoplugin.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="photovideo.h">
+    <ClInclude Include="photovideoplugin.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
