--- a/PlannedFlight/PlannedFlight.vcxproj
+++ b/PlannedFlight/PlannedFlight.vcxproj
@@ -147,7 +147,7 @@
     <ClInclude Include="flightPlanValidator.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="plannedflight.h" />
+    <ClInclude Include="plannedflightplugin.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="flightplan.cpp" />
@@ -158,7 +158,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="plannedflight.cpp" />
+    <ClCompile Include="plannedflightplugin.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
